# hikari-template

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yaml  docker-compose.yml  main.py  pyproject.toml
bot/: Makefile  __init__.py  __main__.py  constants.py  log.py
